--- a/app/src/main/res/layout/activity_credentials.xml
+++ b/app/src/main/res/layout/activity_credentials.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="model"
-            type="rdx.works.wallet.onboarding.viewmodels.PersonalInformationViewModel" />
+            type="rdx.works.wallet.onboarding.viewmodels.CredentialsViewModel" />
     </data>
 
     <ScrollView
@@ -23,46 +23,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:text="@string/personal_information_paragraph" />
+                android:text="@string/credentials_paragraph" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/personal_information_hint_first_name">
+                android:hint="@string/credentials_hint_email">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/firstName"
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:text="@{model.firstName}" />
+                    android:inputType="textEmailAddress"
+                    android:text="@{model.email}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/personal_information_hint_last_name">
+                android:hint="@string/credentials_hint_password">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/lastName"
+                    android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPersonName"
-                    android:text="@{model.lastName}" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/personal_information_hint_phone_number">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/phoneNumber"
-                    android:layout_width="match_parent"
-
-                    android:layout_height="wrap_content"
-                    android:inputType="phone"
-                    android:text="@{model.phoneNumber}" />
+                    android:inputType="textPassword"
+                    android:text="@{model.password}" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
