Add email validation

--- a/app/src/main/res/layout/activity_credentials.xml
+++ b/app/src/main/res/layout/activity_credentials.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -28,7 +29,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/credentials_hint_email">
+                android:hint="@string/credentials_hint_email"
+                app:error="@{model.emailErrorText}"
+                app:errorEnabled="@{model.emailErrorEnabled}">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/email"
@@ -41,6 +44,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:hint="@string/credentials_hint_password">
 
                 <com.google.android.material.textfield.TextInputEditText
